# python-dummy

./: LICENSE  README.md  build.sh  pyproject.toml
src/python-dummy/: blocked.py
