[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dummy"
version = "999.9.9"
authors = [
  { name="Blocked Package", email="blocked@package.org" },
]
description = "Package for blocking on CodeArtifact"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/healthinnovationeast/python-dummy"
Issues = "https://github.com/healthinnovationeast/python-dummy/issues"
